增加namesrv源码分析